--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -11,7 +11,7 @@
     box-sizing: border-box;
     font-family: core.$font-body;
     font-weight: core.$font-weight-thin;
-    line-height: core.$compass-base-line-height-ratio;
+    line-height: core.$line-height;
 
     *, *:before, *:after {
         box-sizing: border-box;
