--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -5,9 +5,9 @@
 .uq-breadcrumb {
   box-sizing: border-box;
   font-family: core.$font-body;
-  font-size: core.$compass-base-font-size;
+  font-size: core.$font-size-m;
   font-weight: core.$font-weight-normal; // will set font-weight to 400 like the FS version Is currently
-  line-height: core.$compass-base-line-height-ratio;
+  line-height: core.$line-height;
   color: $breadcrumb-link;
   list-style: none;
   margin: core.$space-none;
