--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -9,7 +9,7 @@
     font-family: core.$font-body;
     font-size: $site-footer-font-size;
     font-weight: core.$font-weight-thin;
-    line-height: core.$compass-base-line-height-ratio;
+    line-height: core.$line-height;
     
     *, *:before, *:after {
         box-sizing: border-box;
