--- a/packages/table/src/scss/_global.scss
+++ b/packages/table/src/scss/_global.scss
@@ -35,9 +35,9 @@
     border-spacing: 0;
     box-sizing: border-box;
     font-family: core.$font-body;
-    font-size: core.$compass-base-font-size;
+    font-size: core.$font-size-m;
     font-weight: core.$font-weight-normal;
-    line-height: core.$compass-base-line-height-ratio;
+    line-height: core.$line-height;
     color: core.$uq-neutral-dark80;
     list-style: none;
 
@@ -47,7 +47,7 @@
 }
 @mixin table-caption {
     font-size: 1.25rem;
-    line-height: core.$compass-base-line-height-ratio;
+    line-height: core.$line-height;
     font-weight: core.$font-weight-bold;
     text-align: left;
     display: table-caption;
