--- a/packages/storybook-html/src/components/form/examples/password-reset.scss
+++ b/packages/storybook-html/src/components/form/examples/password-reset.scss
@@ -1,19 +1,20 @@
-@use '@uqds/core/src/scss/global' as *;
-@use '@uqds/foundation-global/src/scss/global' as *;
+@use '@uqds/core/src/scss/_global' as core;
 
 .story-password-strength-meter {
-  font-size: .875rem;
-  margin-bottom: 1rem;
-  margin-top: -.675rem;
-  min-height: rem-calc(24px);
+  box-sizing: border-box;
+  font-size: core.$font-size-s;
+  margin-bottom: core.$space;
+  margin-top: -(.675rem);
+  min-height: 24px;
   position: relative;
+
   &-text {
     &-rating {
       color: #9c6b00;
     }
     &--fail {
       .story-password-strength-meter-text-rating {
-        color: $alert;
+        color: core.$alert;
       }
     }
     &--strong {
@@ -22,35 +23,44 @@
       }
     }
   }
+
   &-indicator {
     font-size: 0;
+    line-height: core.$font-size-m * core.$line-height;
     white-space: nowrap;
+
     span {
       background-color: #E6E6E6;
       display: inline-block;
       height: 8px;
       width: 10%;
+
       + span {
         margin-left: 1px;
       }
+
       &.fill {
         background-color: #9c6b00;
       }
     }
+
     &--fail {
       span.fill {
-        background-color: $alert;
+        background-color: core.$alert;
       }
     }
+
     &--strong {
       span.fill {
         background-color: #2EA836;
       }
     }
   }
+
   &-warning {
     margin-bottom: .4rem;
   }
+
   &-suggestions,
   &-sequences {
     background-color: #FCFCFC;
@@ -62,31 +72,37 @@
     padding: .9rem 1rem 1.2rem 3.1rem;
     position: relative;
     margin: 0;
+
     &:before {
       display: block;
       font-weight: normal;
       margin-bottom: .4rem;
       margin-left: -2rem;
     }
-    @media #{$medium-up} {
+
+    @media #{core.$screen-md-up} {
       display: table-cell;
       margin: 0 0 1rem 0;
       width: 50%;
     }
   }
+
   &-suggestions {
     &:before {
       content: "Suggestions to strengthen your password:";
     }
   }
+
   &-sequences {
     border-width: 1px;
     margin-bottom: 1rem;
     margin-top: -1px;
+
     &:before {
       content: "These issues are weakening your password:";
     }
-    @media #{$medium-up} {
+
+    @media #{core.$screen-md-up} {
       border-width: 1px 1px 1px 0;
     }
   }
