--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -1,5 +1,10 @@
 @use '@uqds/core/src/scss/global' as core;
 @use 'global' as *;
+
+// Remove namespace for uq-icons import
+$uq-font-size-base: core.$uq-font-size-base;
+$uq-icons: core.$uq-icons;
+
 @import '@uqds/core/src/fonts/uq-icons/scss/mixins';
 
 // Accordion / Toggle style
