storybook-html: update kitchen sink grid-menu examples

--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -438,49 +438,49 @@
 <!-- grid-menu -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
-    <h2>Grid menu with descriptions</h2>
-    <ul class="grid-menu">
-      <li class="grid-menu__item">
-        <a href="#" class="grid-menu__link">
-          <span class="grid-menu__icon icon icon-bed"></span>
-          <span class="grid-menu__title">Menu link 1</span>
-          <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+    <h2>Grid menu with icons &amp; descriptions</h2>
+    <ul class="uq-grid-menu">
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 1</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
           </span>
         </a>
       </li>
-      <li class="grid-menu__item">
-        <a href="#" class="grid-menu__link">
-          <span class="grid-menu__icon icon icon-bed"></span>
-          <span class="grid-menu__title">Menu link 2</span>
-          <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 2</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
           </span>
         </a>
       </li>
-      <li class="grid-menu__item">
-        <a href="#" class="grid-menu__link">
-          <span class="grid-menu__icon icon icon-bed"></span>
-          <span class="grid-menu__title">Menu link 3</span>
-          <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 3</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
           </span>
         </a>
       </li>
-      <li class="grid-menu__item">
-        <a href="#" class="grid-menu__link">
-          <span class="grid-menu__icon icon icon-bed"></span>
-          <span class="grid-menu__title">Menu link 4</span>
-          <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 4</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
           </span>
         </a>
       </li>
-      <li class="grid-menu__item">
-        <a href="#" class="grid-menu__link">
-          <span class="grid-menu__icon icon icon-bed"></span>
-          <span class="grid-menu__title">Menu link 5</span>
-          <span class="grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
+      <li class="uq-grid-menu__item">
+        <a href="#" class="uq-grid-menu__link">
+          <span class="uq-grid-menu__icon uq-icon uq-icon--hotel-bedroom-1"></span>
+          <span class="uq-grid-menu__title">Menu link 5</span>
+          <span class="uq-grid-menu__description">Ullamcorper est sodales egestas condimentum vestibulum proin justo morbi
             luctus porttitor adipiscing eu a eu massa inceptos cras non tempus taciti.
           </span>
         </a>
@@ -488,13 +488,13 @@
     </ul>
     <br/>
     <h2>Grid menus with equalised height</h2>
-    <ul class="grid-menu">
-      <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Refresh to see me equalise!</span></a></li>
-      <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Menu link 2</span></a></li>
-      <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">I have a long title! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi interdum eros vitae dignissim luctus.</span></a></li>
-      <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Menu link 4</span></a></li>
-      <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Menu link 5</span></a></li>
-      <li class="grid-menu--equalised"><a href="#"><span class="grid-menu__title">Menu link 6</span></a></li>
+    <ul class="uq-grid-menu">
+      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Refresh to see me equalise!</span></a></li>
+      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 2</span></a></li>
+      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi interdum eros vitae dignissim luctus. Phasellus et ligula est.</span></a></li>
+      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 4</span></a></li>
+      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 5</span></a></li>
+      <li class="uq-grid-menu--equalised"><a href="#"><span class="uq-grid-menu__title">Menu link 6</span></a></li>
     </ul>
   </div>
 </div>
