--- a/packages/storybook-html/src/components/site-header/site-header.html
+++ b/packages/storybook-html/src/components/site-header/site-header.html
@@ -19,111 +19,112 @@
         <li class="uq-site-header__navigation__list-item
                    uq-site-header__navigation__list-item--has-subnav
                    uq-site-header__navigation__list-item--active">
-          <a href="/study" aria-expanded="false">Study</a>
+          <a href="/study" aria-haspopup="true" aria-expanded="false">Study</a>
           <span class="uq-site-header__navigation__sub-toggle">Open</span>
           <ul class="uq-site-header__navigation__list
-                     uq-site-header__navigation__list--level-2">
+                     uq-site-header__navigation__list--level-2" aria-label="Study">
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/programs" aria-expanded="false">Find a program</a>
+              <a href="/study/programs">Find a program</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/agriculture-environment" aria-expanded="false">Agriculture and Environment</a>
+              <a href="/study/agriculture-environment">Agriculture and Environment</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/architecture-planning" aria-expanded="false">Architecture and Planning</a>
+              <a href="/study/architecture-planning">Architecture and Planning</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/arts-humanities-social-sciences" aria-expanded="false">Arts, Humanities and Social Sciences</a>
+              <a href="/study/arts-humanities-social-sciences">Arts, Humanities and Social Sciences</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/business-economics" aria-expanded="false">Business and Economics</a>
+              <a href="/study/business-economics">Business and Economics</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/education" aria-expanded="false">Education</a>
+              <a href="/study/education">Education</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/engineering-computing" aria-expanded="false">Engineering and Computing</a>
+              <a href="/study/engineering-computing">Engineering and Computing</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/health-behavioural-sciences" aria-expanded="false">Health and Behavioural Sciences</a>
+              <a href="/study/health-behavioural-sciences">Health and Behavioural Sciences</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/law" aria-expanded="false">Law</a>
+              <a href="/study/law">Law</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/medicine" aria-expanded="false">Medicine</a>
+              <a href="/study/medicine">Medicine</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/science-mathematics" aria-expanded="false"
+              <a href="/study/science-mathematics"
                 >Science and Mathematics</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/study/micromasters-uqx" aria-expanded="false">MicroMasters and UQx</a>
+              <a href="/study/micromasters-uqx">MicroMasters and UQx</a>
             </li>
           </ul>
         </li>
         <li class="uq-site-header__navigation__list-item
                    uq-site-header__navigation__list-item--has-subnav">
-          <a href="/admissions" aria-expanded="false">Admissions</a>
+          <a href="/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
           <span class="uq-site-header__navigation__sub-toggle">Open</span>
           <ul class="uq-site-header__navigation__list 
-                     uq-site-header__navigation__list--level-2">
+                     uq-site-header__navigation__list--level-2" aria-label="Admissions">
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/undergraduate" aria-expanded="false">Undergraduate</a>
+              <a href="/admissions/undergraduate">Undergraduate</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/honours" aria-expanded="false">Honours</a>
+              <a href="/admissions/honours">Honours</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/postgraduate-coursework" aria-expanded="false">Postgraduate coursework</a>
+              <a href="/admissions/postgraduate-coursework">Postgraduate coursework</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/higher-degree-research" aria-expanded="false">Higher degree by research</a>
+              <a href="/admissions/higher-degree-research">Higher degree by research</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/cross-institutional-study" aria-expanded="false">Cross-institutional study</a>
+              <a href="/admissions/cross-institutional-study">Cross-institutional study</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/non-award-study" aria-expanded="false">Non-award study</a>
+              <a href="/admissions/non-award-study">Non-award study</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/admissions/doctor-medicine" aria-expanded="false">Doctor of Medicine</a>
+              <a href="/admissions/doctor-medicine">Doctor of Medicine</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="https://www.uq.edu.au/studyabroad/how-to-apply" aria-expanded="false">Study abroad and incoming exchange</a>
+              <a href="https://www.uq.edu.au/studyabroad/how-to-apply">Study abroad and incoming exchange</a>
             </li>
           </ul>
         </li>
         <li class="uq-site-header__navigation__list-item
                    uq-site-header__navigation__list-item--has-subnav">
-          <a href="/university-life" aria-expanded="false">University life</a>
+          <a href="/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
           <span class="uq-site-header__navigation__sub-toggle">Open</span>
           <ul class="uq-site-header__navigation__list 
-                     uq-site-header__navigation__list--level-2">
+                     uq-site-header__navigation__list--level-2" aria-label="University life">
             <li class="uq-site-header__navigation__list-item">
-              <a href="/university-life/living-in-brisbane" aria-expanded="false">Living in Brisbane</a>
+              <a href="/university-life/living-in-brisbane">Living in Brisbane</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/university-life/getting-prepared-to-come-to-australia" aria-expanded="false">Getting prepared to come to Australia</a>
+              <a href="/university-life/getting-prepared-to-come-to-australia">Getting prepared to come to Australia</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/university-life/campuses-research-sites" aria-expanded="false">Campuses and research sites</a>
+              <a href="/university-life/campuses-research-sites">Campuses and research sites</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/university-life/campus-tours" aria-expanded="false">Campus tours</a>
+              <a href="/university-life/campus-tours">Campus tours</a>
             </li>
           </ul>
         </li>
         <li class="uq-site-header__navigation__list-item">
-          <a href="/events" aria-expanded="false">Events</a>
+          <a href="/events" aria-haspopup="false" aria-expanded="false">Events</a>
         </li>
         <li class="uq-site-header__navigation__list-item">
-          <a href="/stories" aria-expanded="false">Stories</a>
+          <a href="/stories" aria-haspopup="false" aria-expanded="false">Stories</a>
         </li>
         <li class="uq-site-header__navigation__list-item">
-          <a href="/contact-us" aria-expanded="false">Contact</a>
+          <a href="/contact-us" aria-haspopup="false" aria-expanded="false">Contact</a>
         </li>
       </ul>
     </nav>
   </div>
 </div>
+
